# langchain-claude-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  contract.yml  release.yml
langchain_claude_cli/: __init__.py  _compat.py  _convert.py  _options.py  _pool.py  _runner.py  _sessions.py  _streaming.py  chat_models.py  exceptions.py  tools.py
langchain_claude_cli/middleware/: __init__.py  claude_code.py
openspec/changes/archive/2026-07-10-create-langchain-claude-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-release-0-2/: design.md  proposal.md
openspec/changes/archive/2026-07-11-release-0-3/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-release-0-4/: design.md
openspec/changes/create-langchain-claude-cli/: tasks.md
openspec/changes/create-langchain-claude-cli/specs/agentic-mode/: spec.md
openspec/changes/create-langchain-claude-cli/specs/session-management/: spec.md
openspec/changes/create-langchain-claude-cli/specs/tool-calling/: spec.md
openspec/changes/fix-ambient-runnable-config/: design.md  proposal.md  tasks.md
openspec/changes/fix-ambient-runnable-config/specs/session-management/: spec.md
openspec/changes/fix-stale-session-resume/: design.md  proposal.md  tasks.md
openspec/changes/fix-stale-session-resume/specs/session-management/: spec.md
openspec/changes/release-0-2/: design.md  tasks.md
openspec/changes/release-0-2/specs/agent-middleware/: spec.md
openspec/changes/release-0-3/: tasks.md
openspec/changes/release-0-4/: proposal.md  tasks.md
openspec/specs/agent-middleware/: spec.md
openspec/specs/agentic-mode/: spec.md
openspec/specs/chat-model-core/: spec.md
openspec/specs/contract-tests/: spec.md
openspec/specs/persistent-client/: spec.md
openspec/specs/replay-transport/: spec.md
openspec/specs/session-management/: spec.md
openspec/specs/streaming/: spec.md
openspec/specs/structured-output/: spec.md
openspec/specs/tool-calling/: spec.md
spikes/: FINDINGS.md  s1_defer.py  s1b_resume.py  s2_parallel.py  s3_replay.py  s4_document.py  s5_streaming.py  s6_ratelimit.py  s7_files_api.py  s8_persistent_client.py  s9_env_key.py
tests/: _cassettes.py  conftest.py
tests/cassette_tests/: test_flows.py  test_persistent_flow.py
tests/cassettes/: test_invoke_basic.json  test_multiturn_resume.json  test_parallel_tool_calls.json  test_pdf_document.json  test_persistent_reuse_flow.json  test_stop_sequence_in_stream.json  test_streaming.json  test_structured_output.json  test_tool_cycle.json
tests/contract_tests/: test_cli_contract.py
tests/integration_tests/: test_e2e.py  test_standard.py
tests/unit_tests/: test_ambient_config.py  test_cassette_serializer.py  test_chat_models.py  test_convert.py  test_pool.py  test_sessions.py  test_sessions_v02.py  test_stale_session.py  test_standard.py  test_v02.py  test_watchdog.py
(+11 files in other folders)
