[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-claude-cli"
description = "Drop-in ChatAnthropic replacement backed by the Claude Code CLI — use your Claude Pro/Max subscription, no API key needed"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Charly López", email = "clriesco@gmail.com" }]
version = "0.4.2"
requires-python = ">=3.10"
keywords = ["langchain", "claude", "anthropic", "claude-code", "claude-agent-sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "claude-agent-sdk>=0.2.115,<0.3",
]

[project.urls]
Homepage = "https://github.com/clriesco/langchain-claude-cli"
Issues = "https://github.com/clriesco/langchain-claude-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_claude_cli"]

[tool.hatch.build.targets.sdist]
include = ["langchain_claude_cli", "tests", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
lint = ["ruff>=0.13.1,<0.16.0"]
typing = ["mypy>=1.18.1,<1.20.0"]
test = [
    "pytest>=8.4.0,<10.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "syrupy>=4.9.0,<6.0.0",
    "langchain-tests>=1.1.2,<2.0.0",
    "langgraph>=1.0.8",
    "langchain>=1.0,<2",
]
dev = ["langchain-anthropic>=1.4.0"]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "RUF", "SIM", "PTH", "T20"]
ignore = ["SIM117", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"spikes/**" = ["T20"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Mixin pattern (v0.4 split): methods annotate `self: ChatClaudeCli` so mypy
# fully checks attribute access; the "erased type of self" [misc] complaint is
# the known cost of that pattern and is silenced only for the mixin modules.
[[tool.mypy.overrides]]
module = ["langchain_claude_cli._options", "langchain_claude_cli._runner", "langchain_claude_cli._streaming"]
disable_error_code = ["misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "compile: placeholder test to compile integration tests without running them",
    "integration: tests that require an authenticated claude CLI",
    "contract: CLI behavior invariants the design depends on (live CLI, bounded cost)",
]
addopts = "-m 'not integration and not contract'"
